# pyo3_adt_demo

./: README.md  pyproject.toml
python/: adt_stuff.pyi  main.py
rust/: Cargo.toml  expanded.rs  lib.rs  lib_inner.rs
