[package]
name = "adt_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { features = ["extension-module"], path = "../../pyo3" }

[lib]
name = "adt_stuff"
crate-type = ["cdylib"]
path = "lib.rs"
